--- a/index.html
+++ b/index.html
@@ -87,9 +87,7 @@
 			чтобы разместить свою статья обращаитесь по номеру:911
 		</div>
 		<div class="sidebar">
-			<button class="floating-button">
-			
-			</button>
+			<a href=# class="floating-button">Авто</a>
 		</div>
 		<div class="sidebar2">
 		топовые объявления 
