--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
 		</div>
 		<div class="sidebar">
 			<a href=# class="floating-button">Авто</a>
+			<a href=# class="floating-button">Недвижимость</a>
+			<a href=# class="floating-button">Вакансии</a>
+			<a href=# class="floating-button">Помощь</a>
 		</div>
 		<div class="sidebar2">
 		топовые объявления 
