--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 			<a href=# class="floating-button">Недвижимость</a>
 			<a href=# class="floating-button">Вакансии</a>
 			<a href=# class="floating-button">Помощь</a>
+			<a href=# class="floating-button">Обучение</a>
 		</div>
 		<div class="sidebar2">
 		топовые объявления 
