--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <body>
 	<div class="main">
 		<div class="footer">
-			чтобы разместить свою статья обращаитесь по номеру:911
+			чтобы разместить своё объявление обращаитесь по номеру:+77780101173
 		</div>
 		<div class="sidebar">
 			<a href=# class="floating-button">Авто</a>
@@ -97,13 +97,10 @@
 		топовые объявления 
 		</div>
 		<div class="board">
-			<h1>Car</h1>
-			<h3>тут текст и описание объявления и тд,а этот текст нужен для заполнения страницы хоть чем то</h3>
+			<h1>Здравствуи читатель</h1>
+			<h3>этот сайт еще пустой,но в будущем он будет наполнен самым разными объявлениями,если ты хочешь разместить свое объявлениездесь то обращаися по номеру:+77780101173</h3>
 		</div>
-		<div class="board">
-			<h1>Car</h1>
-			<h3>тут текст и описание объявления и тд,а этот текст нужен для заполнения страницы хоть чем то</h3>
-		</div>
+		
 	</div>
 </body>
 </html>
