--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 	.main{
 	background-image: linear-gradient( 135deg, #43CBFF 10%, #9708CC 100%);
 	width:100%;
-	height:auto;
-	min-height:1370px;
+	height:100%;
+	
 	}
 	 .board{
 		 border-radius:15px;
