--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
   color: white;
   transform: translateY(-7px);
 }
+	body{
+	background-image: linear-gradient( 135deg, #43CBFF 10%, #9708CC 100%);
+	}
 	
 	* {
 	margin:0;
