--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   transform: translateY(-7px);
 }
 	body{
-	background-image: linear-gradient( 135deg, #43CBFF 10%, #9708CC 100%);
+	background-image: linear-gradient( 135deg, #43CBFF 10%, #9708CC 100%) no-repeat;
 	}
 	
 	* {
