--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
   color: white;
   transform: translateY(-7px);
 }
+	body{
+	background-image: linear-gradient( 135deg, #43CBFF 10%, #9708CC 100%) fixed;
+	}
 	
 	
 	* {
@@ -84,7 +87,7 @@
 
 
 <body>
-	<div class="main">
+	
 	<div class="footer">
 			чтобы разместить своё объявление обращаитесь по номеру:+77780101173
 		</div>
@@ -102,6 +105,6 @@
 			<h1>Здравствуи читатель</h1>
 			<h3>этот сайт еще пустой,но в будущем он будет наполнен самым разными объявлениями,если ты хочешь разместить свое объявление здесь то обращаися по номеру:+77780101173</h3>
 		</div>
-	</div>
+	
 </body>
 </html>
