--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
   color: white;
   transform: translateY(-7px);
 }
+	html, body {
+            height: 100%;
+        }
 	body{
 	background-image: linear-gradient( 135deg, #43CBFF 10%, #9708CC 100%) fixed;
 	}
-	
-	
 	* {
 	margin:0;
 	padding:0;
