--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			<a href=# class="floating-button">Обучение</a>
 		</div>
 		<div class="sidebar2">
-		топовые объявления 
+		топовые объявлениh1bbbbb
 		</div>
 		<div class="board">
 			<h1>Здравствуи читатель</h1>
