--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             height: 100%;
         }
 	body{
+	background-attachment: fixed;
 	background-image: linear-gradient( 135deg, #43CBFF 10%, #9708CC 100%) fixed;
 	}
 	* {
