--- a/index.html
+++ b/index.html
@@ -32,10 +32,6 @@
 	html, body {
             height: 100%;
         }
-	body{
-	background-attachment: fixed;
-	background-image: linear-gradient( 135deg, #43CBFF 10%, #9708CC 100%) fixed;
-	}
 	* {
 	margin:0;
 	padding:0;
@@ -89,7 +85,7 @@
 
 
 <body>
-	
+	<div class="main">
 	<div class="footer">
 			чтобы разместить своё объявление обращаитесь по номеру:+77780101173
 		</div>
@@ -107,6 +103,6 @@
 			<h1>Здравствуи читатель</h1>
 			<h3>этот сайт еще пустой,но в будущем он будет наполнен самым разными объявлениями,если ты хочешь разместить свое объявление здесь то обращаися по номеру:+77780101173</h3>
 		</div>
-	
+	</div>
 </body>
 </html>
