--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 			<a href=# class="floating-button">Обучение</a>
 		</div>
 		<div class="sidebar2">
-		топовые объявлениh1bbbbb
+		топовые объявления
 		</div>
 		<div class="board">
 			<h1>Здравствуи читатель</h1>
