--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 			<a href=# class="floating-button">Вакансии</a>
 			<a href=# class="floating-button">Помощь</a>
 			<a href=# class="floating-button">Обучение</a>
+			<a href=# class="floating-button">Другое</a>
 		</div>
 		<div class="sidebar2">
 		топовые объявления
