--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 			<a href=# class="floating-button">Другое</a>
 		</div>
 		<div class="sidebar2">
-		топовые объявления
+			<h1>Лучшие объявления</h1>
 		</div>
 		<div class="board">
 			<h1>Здравствуи читатель</h1>
