--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 		background-color:#9187ff;
 		}
 	.sidebar2{
+		text-align:center;
 		float:right;
 		width:20%;
 		height:auto;
@@ -98,7 +99,7 @@
 			<a href=# class="floating-button">Другое</a>
 		</div>
 		<div class="sidebar2">
-			
+			<h3>Лучшие объявления</h3>
 		</div>
 		<div class="board">
 			<h1>Здравствуи читатель</h1>
