--- a/index.html
+++ b/index.html
@@ -2,89 +2,9 @@
 <html lang="ru">
 <head>
 	<title>Доска объявлений</title>
+	<link type = "text/css" rel = "stylesheet" href = "data/index.css">
+
 </head>
-<style>
-	    .floating-button {
-  text-decoration: none;
-  display: inline-block;
-  width: 140px;
-  height: 45px;
-  line-height: 45px;
-  border-radius: 45px;
-  margin: 10px 20px;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 11px;
-  text-transform: uppercase;
-  text-align: center;
-  letter-spacing: 3px;
-  font-weight: 600;
-  color: #524f4e;
-  background: white;
-  box-shadow: 0 8px 15px rgba(0, 0, 0, .1);
-  transition: .3s;
-}
-.floating-button:hover {
-  background: #2EE59D;
-  box-shadow: 0 15px 20px rgba(46, 229, 157, .4);
-  color: white;
-  transform: translateY(-7px);
-}
-	html, body{
-		height:100%;
-	}
-	* {
-	margin:0;
-	padding:0;
-	}
-	.main{
-	background-image: linear-gradient( 135deg, #43CBFF 10%, #9708CC 100%);
-	width:100%;
-	height:100%;
-	
-	}
-	 .board{
-		 border-radius:15px;
-		background-color:#d4a34e;
-		width:50%;
-		margin-left:auto;
-		margin-right:auto;
-		height:auto;
-		text-align:center;
-		min-height:150px;
-		margin-bottom:10px;
-		}
-	.sidebar{
-		float:left;
-		width:20%;
-		height:auto;
-		margin-left:10px;
-		margin-top:10px;
-		min-height:500px;
-		background-color:#9187ff;
-		}
-	.sidebar2{
-		text-align:center;
-		float:right;
-		width:20%;
-		height:auto;
-		margin-right:10px;
-		margin-top:10px;
-		min-height:500px;
-		background-color:#9187ff;
-		}
-	.footer{
-		position: fixed;
-		left: 0; bottom:0;
-		padding:10px;
-		background:#3d3c66;
-		color: #fff;
-		width: 100%;
-		height:25px;
-		text-align:center;
-		}
-</style>
-
-
 <body>
 	<div class="main">
 	<div class="footer">
