--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 	<title>Доска объявлений</title>
-	<link type = "text/css" rel = "stylesheet" href = "data/index.css">
+	<link type = "text/css" rel = "stylesheet" href = "css/index.css">
 
 </head>
 <body>
