--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@
 		<div class="sidebar2">
 			<h3>Лучшие объявления</h3>
 		</div>
+		
 		<div class="board">
 			<h1>Здравствуи читатель</h1>
 			<h3>этот сайт еще пустой,но в будущем он будет наполнен самым разными объявлениями,если ты хочешь разместить свое объявление здесь то обращаися по номеру:+77780101173</h3>
+		</div>
+		<div class="board">
+			<h1>Обучение</h1>
+			<h2>Front-end разработчик хорошо оплачиваемая проффесия в 2021 году,сейчас мир полон современных технологии,и каждому школьнику это интересно,если вы запишите своего ребёнка на мой курсы по изучению создании веб сайтов,он ещё не раз поблагодарить вас,для дополнительной информации обращаитесь по номеру:+77780101173</h2>
 		</div>
 	</div>
 </body>
