--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
 			<h1>Обучение</h1>
 			<h2>Front-end разработчик хорошо оплачиваемая проффесия в 2021 году,сейчас мир полон современных технологии,и каждому школьнику это интересно,если вы запишите своего ребёнка на мой курсы по изучению создании веб сайтов,он ещё не раз поблагодарить вас,для дополнительной информации обращаитесь по номеру:+77780101173</h2>
 		</div>
+		<div class="board">
+			<h1>Домашняя выпечка</h1>
+			<h2>
+			Домашняя выпечка. Сдоба, торты. Принимаю заказы🎂🥐🥯<br>Тел: 87756304890
+			</h2>
+		</div>
 	</div>
 </body>
 </html>
