--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<div class="board">
 			<h1>Домашняя выпечка</h1>
 			<h2>
-			Домашняя выпечка. Сдоба, торты. Принимаю заказы🎂🥐🥯<br>Тел: 87756304890
+			Домашняя выпечка.<br> Сдоба, <br>торты. <br>Принимаю заказы🎂🥐🥯<br>Тел: 87756304890
 			</h2>
 		</div>
 	</div>
