--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div class="sidebar2">
 			<h3>Лучшие объявления</h3>
 		</div>
-		
+		<div class="scroll">
 		<div class="board">
 			<h1>Здравствуи читатель</h1>
 			<h3>этот сайт еще пустой,но в будущем он будет наполнен самым разными объявлениями,если ты хочешь разместить свое объявление здесь то обращаися по номеру:+77780101173</h3>
@@ -32,6 +32,7 @@
 			<h2>
 			Домашняя выпечка.<br> Сдоба, <br>торты. <br>Принимаю заказы🎂🥐🥯<br>Тел: 87756304890
 			</h2>
+		</div>
 		</div>
 	</div>
 </body>
