--- a/pages/page1.html
+++ b/pages/page1.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+	<title>Доска объявлений</title>
+	<link type = "text/css" rel = "stylesheet" href = "css/index.css">
 
+</head>
+<body>
+	<div class="main">
+		<div class="sidebar">
+      <a href=index.html class="floating-button">Главная страница</a>
+			<a href=# class="floating-button">Авто</a>
+			<a href=# class="floating-button">Недвижимость</a>
+			<a href=# class="floating-button">Вакансии</a>
+			<a href=# class="floating-button">Помощь</a>
+			<a href=# class="floating-button">Обучение</a>
+		</div>
+		<div class="sidebar2">
+			<h3>Лучшие объявления</h3>
+		</div>
+		<div class="scroll">
+		<div class="board">
+			<h1>Домашняя выпечка</h1>
+			<h2>
+			Домашняя выпечка.<br> Сдоба, <br>торты. <br>Принимаю заказы🎂🥐🥯<br>Тел: 87756304890
+			</h2>
+		</div>
+		</div>
+	</div>
+</body>
+</html>
