--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<a href=# class="floating-button">Вакансии</a>
 			<a href=# class="floating-button">Помощь</a>
 			<a href=# class="floating-button">Обучение</a>
-			<a href=# class="floating-button">Другое</a>
+			<a href=pages/page1.html class="floating-button">Другое</a>
 		</div>
 		<div class="sidebar2">
 			<h3>Лучшие объявления</h3>
