--- a/other.html
+++ b/other.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="main">
 		<div class="sidebar">
-      <a href=index.html class="floating-button">Главная страница</a>
+      <a href=index.html class="floating-button">Главная</a>
 			<a href=# class="floating-button">Авто</a>
 			<a href=# class="floating-button">Недвижимость</a>
 			<a href=# class="floating-button">Вакансии</a>
