--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
 	<title>Доска объявлений</title>
+	<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 	<link type = "text/css" rel = "stylesheet" href = "css/index.css">
 
 </head>
