--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 			<a href=# class="floating-button">Обучение</a>
 			<a href=other.html class="floating-button">Другое</a>
 		</div>
-		<div class="sidebar2">
-			<h3>Лучшие объявления</h3>
+		<div id="sidebar2">
+			<h3>{{ message }}</h3>
 		</div>
 		<div class="scroll">
 		<div class="board">
@@ -35,6 +35,14 @@
 			</h2>
 		</div>
 		</div>
+		<script>
+		var app = new Vue({
+			el: '#sidebar2',
+			data: {
+			message:"Лучшие объявления",
+			}
+		})
+		</script>
 	</div>
 </body>
 </html>
