--- a/other.html
+++ b/other.html
@@ -15,7 +15,7 @@
 			<a href=# class="floating-button">Помощь</a>
 			<a href=# class="floating-button">Обучение</a>
 		</div>
-		<div id="sidebar2">
+		<div class="sidebar2">
 			<h3>Лучшие объявления</h3>
 		</div>
 		<div class="scroll">
