--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
 			el: '#vue',
 			data: {
 			message:"Лучшие объявления",
+			items: [
+			{ item: 'Домашняя выпечка'},
+			]
 			}
 		})
 		</script>
