--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<div id="vue">
 			<h3>{{ message }}</h3>
 			<ul>
-			<li v-for='item in items'>{{ item.message }}</li>	
+			<li v-for="item in items">{{ item.message }}</li>	
 			</ul>
 			</div>
 		</div>
