--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
 		<div class="sidebar2">
 			<div id="vue">
 			<h3>{{ message }}</h3>
-			<ul>
-			<li v-for="item in items">{{ item.message }}</li>	
-			</ul>
+			<h2 v-for="item in items">{{ item.message }}</h2>
 			</div>
 		</div>
 		<div class="scroll">
