--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			data: {
 			message:"Лучшие объявления",
 			items: [
-			{ item: 'Домашняя выпечка'},
+			{ message: 'Домашняя выпечка'},
 			]
 			}
 		})
