--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</div>
 		<div class="sidebar2">
 			<div id="vue">
-			<h3>{{ message }}</h3>
+			<h3>{{ best }}</h3>
 			<h2 v-for="item in items">{{ item.message }}</h2>
 			</div>
 		</div>
@@ -42,7 +42,7 @@
 		var app = new Vue({
 			el: '#vue',
 			data: {
-			message:"Лучшие объявления",
+			:"Лучшие объявления",
 			items: [
 			{ message: 'Домашняя выпечка'},
 			]
