--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		var app = new Vue({
 			el: '#vue',
 			data: {
-			:"Лучшие объявления",
+			best:"Лучшие объявления",
 			items: [
 			{ message: 'Домашняя выпечка'},
 			]
