--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</div>
 		<div class="sidebar2">
 			<div id="vue">
-			<h3>{{ best }}</h3>
+			<h3>{{ best }}</h3><br>
 			<h2 v-for="item in items">{{ item.message }}</h2>
 			</div>
 		</div>
@@ -34,7 +34,7 @@
 		<div class="board">
 			<h1>Домашняя выпечка</h1>
 			<h2>
-			Домашняя выпечка.<br> Сдоба, <br>торты. <br>Принимаю заказы🎂🥐🥯<br>Тел: 87756304890
+			Домашняя выпечка.<br> <div id="vue"><h2 v-for="board in boards">{{ board.message }} <br>{{ board.message1 }}.</h2></div> <br>Принимаю заказы🎂🥐🥯<br>Тел: 87756304890
 			</h2>
 		</div>
 		</div>
@@ -45,6 +45,10 @@
 			best:"Лучшие объявления",
 			items: [
 			{ message: 'Домашняя выпечка'},
+			],
+			boards:[
+			{ message: 'Сдоба'},
+			{ message1: 'торты'}
 			]
 			}
 		})
