--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<div class="board">
 			<h1>Домашняя выпечка</h1>
 			<h2>
-			Домашняя выпечка.<br> <div id="vue"><h2 v-for="board in boards">{{ board.message }} <br>{{ board.message }}.</h2></div> <br>Принимаю заказы🎂🥐🥯<br>Тел: 87756304890
+			Домашняя выпечка.<br> <div id="vue"><h2 v-for="board in boards">{{ boards.message }} <br>{{ boards.message }}.</h2></div> <br>Принимаю заказы🎂🥐🥯<br>Тел: 87756304890
 			</h2>
 		</div>
 		</div>
