--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<h2>Front-end разработчик хорошо оплачиваемая проффесия в 2021 году,сейчас мир полон современных технологии,и каждому школьнику это интересно,если вы запишите своего ребёнка на мой курсы по изучению создании веб сайтов,он ещё не раз поблагодарить вас,для дополнительной информации обращаитесь по номеру:+77780101173</h2>
 		</div>
 		<div class="board">
-			<div id="vue">
+			<div id="vu">
 			<h1>{{ title }}</h1>
 			</div>
 			<h2>
@@ -45,11 +45,16 @@
 			el: '#vue',
 			data: {
 			best:"Лучшие объявления",
-			title:"Домашняя выпечка",
 			items: [
 			{ message: 'Домашняя выпечка'},
 			]
+			}
 		})
+		var app = new Vue({
+			el: 'vu',
+			data:{
+			title="Домашняя выпечка",
+			}
 		</script>
 	</div>
 </body>
