--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<div class="board">
 			<h1>Домашняя выпечка</h1>
 			<h2>
-			Домашняя выпечка.<br>Сдобы, Торты<br>Принимаю заказы🎂🥐🥯<br>Тел: 87756304890
+			<br>Сдобы, Торты<br>Принимаю заказы🎂🥐🥯<br>Тел: 87756304890
 			</h2>
 		</div>
 		</div>
